# mitrader

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  app.py  pyproject.toml  pytest.ini
docs/: features.md
docs/agents/: domain.md  issue-tracker.md
docs/plans/: 2026-05-04-strategy-risk-return-ui-optimization.md
docs/superpowers/plans/: 2026-04-17-kline-visualization.md  2026-04-18-type-mismatch-fix.md  2026-04-29-strategy-risk-return.md
docs/superpowers/prds/: 2026-04-29-strategy-risk-return-prd.md
docs/superpowers/specs/: 2026-04-17-kline-visualization-design.md  2026-04-18-test-design.md  2026-04-18-test-impl-plan.md  2026-04-18-type-mismatch-fix-design.md  2026-04-29-strategy-risk-return-design.md
graphify-out/: .graphify_cached.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_python  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
pages/: 1_strategy_risk_return.py
src/: __init__.py  chart_builder.py  data_loader.py  performance.py  performance_charts.py  pnl_loader.py  utils.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_integration.py
tests/e2e/: __init__.py  conftest.py  test_app.py
tests/fixtures/: edge_cases.py
tests/integration/: test_asset_flow.py  test_data_join.py
tests/unit/: test_chart_builder.py  test_data_loader.py  test_performance.py  test_performance_charts.py  test_pnl_loader.py  test_strategy_risk_return_page.py  test_utils.py
