[project]
name = "mitrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly>=6.7.0",
    "polars>=1.39.3",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.3",
]
